fixed nav button and responsiveness issues on ios devices

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -55,9 +55,18 @@ html,
 
 .navbar {
   float: right;
-  margin-top: -2%;
 }
-
+@media (max-height: 750px) {
+  .navbar {
+    margin-top: -3.5%;
+  }
+  .welcome-section > h1 {
+    margin-top: -900px !important;
+  }
+  .welcome-section > p {
+    margin-top: -350px !important;
+  }
+}
 .nav-item {
     padding: 3rem;
     height: 1rem;
@@ -86,6 +95,7 @@ html,
     position: absolute;
     top: 1%;
     left: 1%;
+    z-index: 1000;
 
   }
   
@@ -119,21 +129,43 @@ html,
   }
   
   #menu {
-    width: 100%;
     line-height: 3.5rem;
     font-size: 1.8rem;
-    text-align: center;
-    margin: auto;
+    float: left;
     font-family: 'Lato', sans-serif;
     display: none;
+    position: absolute;
+    background-color: #ffffff;
+    height: 85rem;
+    width: 50%;
+    z-index: 100;
   }
+#menu ul {
+ margin: 4rem 10%;
+}
   #menu a {
     color: black !important;
 
   }
 }
 
+div#cover {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 0;
+  width: 0;
+  z-index: -1;
+}
 
+div#cover.covering {
+  display: block;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 50%);
+}
 
 
 
@@ -147,18 +179,32 @@ html,
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 85rem;
     background-image: linear-gradient(62deg, #000000 0%, #181719 100%);
   }
-  
+  .welcome-section > h1 {
+   margin-top: -255px;
+  }
   .welcome-section > p {
     font-size: 4rem;
     font-weight: 200;
     font-style: italic;
     color: white;
-    margin-top: 10rem !important;
+    margin-top: 365px;
+    position: absolute;
   }
-  .message { display: none; }
+@media (max-height: 1000px) {
+  .welcome-section > h1 {
+    margin-top: -600px;
+  }
+  .welcome-section > p {
+    margin-top: 10px;
+  }
+}
+
+  .message { 
+    display: none;
+  }
   .message:first-child { display: block; }
   
   .animated {
@@ -203,6 +249,9 @@ html,
   @media (max-width: 530px) {
     #toggle {
       width: 6.5%;
+    }
+    #menu ul {
+      margin-left: -1rem;
     }
     .welcome-section > h1 {
       font-size: 4.5rem;
@@ -374,6 +423,9 @@ html,
   @media (max-width: 398px) {
     .contact-section {
       margin-top: 50%;
+    }
+    #menu ul {
+      margin-left: -2.3rem;
     }
   }
   .contact-section-header > h2 {
